--- a/1_and_2_exploring_new_html5_input_types.html
+++ b/1_and_2_exploring_new_html5_input_types.html
@@ -93,6 +93,7 @@
                 </div>
             </fieldset>
         </fieldset>
+        <!-- 2.2 Ensure accessibility with ARIA attributes -->
         <div role="alert" aria-live="assertive" id="error-message">Please be sure to fill out all fields.</div>
         <button type="submit">Submit</button>
         </form>
